cmake_minimum_required(VERSION 2.4)
PROJECT( POSITdemo)
FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( GLUT REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} )
ADD_EXECUTABLE( POSITdemo tryPOSIT.cpp POSIT.cpp POSIT.h )

IF (APPLE)
    include_directories (/System/Library/Frameworks)
    find_library (GLUT_LIBRARY GLUT)
    find_library (OpenGL_LIBRARY OpenGL)
    find_library (APPKIT_LIBRARY APPKIT)
    mark_as_advanced (GLUT_LIBRARY OpenGL_LIBRARY APPKIT_LIBRARY)
    set (EXTRA_LIBS ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${APPKIT_LIBRARY})
ENDIF (APPLE)

TARGET_LINK_LIBRARIES( POSITdemo ${GLUT_glut_LIBRARY} ${OPENGL_LIBRARIES} ${OpenCV_LIBS})
